Add another technique for removing duplicate docker networks
From https://github.com/moby/moby/issues/33561

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,3 +13,4 @@ process data:
     - ./push.sh
   after_script:
     - docker-compose down
+    - docker network rm $(docker network ls -f name="www-admin_default" -q) || true
